# xcelerate

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
.github/actions/build-core/: action.yml
.github/actions/build-java-bridge/: action.yml
.github/workflows/: develop-pr.yml  publish.yml
core/: CMakeLists.txt
core/include/: excel_generator.h
core/src/: excel_generator.cpp
java-bridge/: build.gradle  build.gradle.kts
java-bridge/src/main/java/com/xcelerate/: ExcelGenerator.java  ExcelLib.java  ExcelWriter.java  FileType.java  NativeLoader.java
java-bridge/src/main/java/dev/montyoh/xcelerate/: ExcelLib.java  ExcelWriter.java  FileType.java  NativeLoader.java
java-bridge/src/main/java/me/devmonty/xcelerate/: ExcelLib.java  ExcelWriter.java  FileType.java  NativeLoader.java
java-bridge/src/main/kotlin/com/xcelerate/: ExcelGenerator.kt  ExcelLib.kt
java-bridge/src/test/java/com/xcelerate/: ExcelGeneratorTest.java  ExcelWriterTest.java
java-bridge/src/test/java/dev/montyoh/xcelerate/: ExcelWriterTest.java
java-bridge/src/test/java/me/devmonty/xcelerate/: ExcelWriterTest.java
